# grui

./: .gitignore  CMakeLists.txt
include/: grui.h
src/: grui.c
test/: main.c
